--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
