--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^6.1.6",
     "react-select": "^5.10.2",
     "swiper": "^11.2.10",
     "yup": "^1.7.0"
