--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@reduxjs/toolkit": "^2.8.2",
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
     "html-react-parser": "^5.2.5",
@@ -19,7 +20,9 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
+    "redux": "^5.0.1",
     "swiper": "^11.2.10",
     "yup": "^1.7.0"
   },
